--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "next": "14.2.5",
     "node-cron": "^3.0.3",
     "react": "^18",
