--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/getDataDetail",
-      "schedule": "0 0/30 * * * ?"
+      "schedule": "0 0/30 * * *"
     }
   ]
 }
