--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && prisma db push && next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.18.0",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
     "next": "14.2.5",
@@ -19,6 +18,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@prisma/client": "^5.14.0",
     "@types/node": "^20",
     "@types/node-cron": "^3.0.11",
     "@types/react": "^18",
@@ -26,7 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "prisma": "^5.18.0",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
